--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Gus</string>
+
+    <string name="search_users">Search for users on Github...</string>
+    <string name="search_icon_title">Search</string>
+    <string name="search_for_some_users">Start typing to search</string>
 </resources>
